--- a/styles/App.css
+++ b/styles/App.css
@@ -622,6 +622,57 @@ textarea + small {
     height: 0;
 }
 
+/* --- Toggle Switch --- */
+.toggle-switch {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.toggle-switch input[type="checkbox"] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+.toggle-switch label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 50px;
+  height: 28px;
+  background: hsl(var(--hue2) 13% 18.5% / 0.5);
+  display: block;
+  border-radius: 100px;
+  position: relative;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.toggle-switch label:after {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  width: 22px;
+  height: 22px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.2s;
+}
+
+.toggle-switch input:checked + label {
+  background: hsl(var(--hue1) 50% 50% / 0.8);
+}
+
+.toggle-switch input:checked + label:after {
+  left: calc(100% - 3px);
+  transform: translateX(-100%);
+}
+
+.toggle-switch:active label:after {
+  width: 28px;
+}
+
 
 /* --- Image Dropzone --- */
 .dropzone {
